// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AssetRatings should match snapshot 1`] = `
<Fragment>
  <FlatList
    contentContainerStyle={
      Object {
        "marginTop": 16,
      }
    }
    data={
      Array [
        Object {
          "experience_area": "Location and Neighbourhood",
          "id": 1,
          "rating": 93,
        },
        Object {
          "experience_area": "Fair Pricing for Rent",
          "id": 2,
          "rating": 91,
        },
        Object {
          "experience_area": "Property Up-keep and maintenance",
          "id": 3,
          "rating": 49,
        },
      ]
    }
    disableVirtualization={false}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onEndReachedThreshold={2}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    testID="reviewsList"
    updateCellsBatchingPeriod={50}
    windowSize={21}
  />
  <Label
    style={
      Object {
        "color": "#0084F8",
      }
    }
    textType="semiBold"
    type="large"
  >
    readMore
  </Label>
</Fragment>
`;

exports[`AssetRatings should match snapshot for keyExtractor 1`] = `"undefined-[object Object]"`;

exports[`AssetRatings should match snapshot for renderItem 1`] = `
<View
  key="1-undefined"
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
      "marginBottom": 16,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "borderRadius": 4,
          "flexDirection": "row",
          "padding": 8,
          "width": 80,
        },
        Object {
          "backgroundColor": "rgba(71, 194, 178, 0.12)",
        },
      ]
    }
  >
    <Icon
      allowFontScaling={false}
      color="#47C2B1"
      name="thumbs-up"
      size={20}
    />
    <Label
      style={
        Array [
          Object {
            "color": "#4C5F72",
            "marginStart": 12,
          },
          Object {
            "color": "#47C2B1",
          },
        ]
      }
      textType="semiBold"
      type="large"
    >
      93%
    </Label>
  </View>
  <Label
    style={
      Object {
        "color": "#4C5F72",
        "marginStart": 12,
      }
    }
    textType="regular"
    type="large"
  />
</View>
`;

exports[`AssetRatings should match snapshot for renderItem when rating less than 50 1`] = `
<View
  key="3-undefined"
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
      "marginBottom": 16,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "borderRadius": 4,
          "flexDirection": "row",
          "padding": 8,
          "width": 80,
        },
        Object {
          "backgroundColor": "rgba(242, 61, 6, 0.12)",
        },
      ]
    }
  >
    <Icon
      allowFontScaling={false}
      color="#F23C06"
      name="thumbs-down"
      size={20}
    />
    <Label
      style={
        Array [
          Object {
            "color": "#4C5F72",
            "marginStart": 12,
          },
          Object {
            "color": "#F23C06",
          },
        ]
      }
      textType="semiBold"
      type="large"
    >
      49%
    </Label>
  </View>
  <Label
    style={
      Object {
        "color": "#4C5F72",
        "marginStart": 12,
      }
    }
    textType="regular"
    type="large"
  />
</View>
`;
